--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -672,7 +672,7 @@ body{
     padding: 100px 0 !important;
     position: relative;
     .dimerSaurio{
-      @include imagen($size: contain);
+      @include imagen('', contain, center bottom);
       position: absolute;
       bottom: 0;
       right: 0;
@@ -715,6 +715,37 @@ body{
             stroke-width: 1;
           }
         }
+      }
+    }
+  }
+}
+.#{$pfx}contacto{
+  .#{$pfx}container{
+    @include container(100%);
+    @include flex($ai: stretch);
+    .mapa{
+      width: 50%;
+      min-height: 300px;
+      iframe{
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .infoContacto{
+      @include flex(column);
+      width: 50%;
+      padding: 50px;
+      color: $blanco;
+      background-color: $primario;
+      box-sizing: border-box;
+      .header{
+        font-size: 18px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+      }
+      .texto{
+        margin-bottom: 10px;
       }
     }
   }
