--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -62,6 +62,48 @@ body{
       height: 200px;
       box-sizing: border-box;
       background-color: $gris;
+      position: relative;
+      &:hover{
+        .detalleRapido{
+          width: 100%;
+          height: 100%;
+          opacity: 1;
+        }
+      }
+      .detalleRapido{
+        @include flex(column);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        width: 90%;
+        height: 90%;
+        padding: 20px;
+        opacity: 0;
+        color: $blanco;
+        font-size: 12px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        background-color: rgba($negro,.9);
+        box-sizing: border-box;
+        overflow: hidden;
+        cursor: pointer;
+        z-index: $zup;
+        transition: ease all .3s;
+        .icono{
+          width: 35px;
+          height: 35px;
+          margin-bottom: 5px;
+          svg{
+            path, circle{
+              fill: none;
+              stroke: currentColor;
+            }
+          }
+        }
+      }
       .imgProd{
         @include imagen('', contain);
         width: calc(100% - 20px);
@@ -251,6 +293,75 @@ body{
   &-2{
     @extend .#{$pfx}underDecorado;
     color: $secundario;
+  }
+}
+.#{$pfx}infoRapidaModal{
+  @include flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba($negro,.8);
+  z-index: $zmodal;
+  .modalContainer{
+    @include container;
+    max-width: 1000px;
+    background-color: $blanco;
+    .topContent{
+      @include flex;
+      width: 100%;
+      .imagenContainer{
+        @include flex;
+        width: 50%;
+        height: 500px;
+        padding: 50px;
+        background-color: $gris;
+        box-sizing: border-box;
+        .imagen{
+          @include imagen($size: contain);
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .texto{
+        width: 50%;
+        padding: 20px;
+        text-align: center;
+        box-sizing: border-box;
+        p{
+          margin-bottom: 10px;
+          font-size: 14px;
+        }
+        .bold{
+          font-weight: 600;
+        }
+        .nombre{
+          font-size: 25px;
+          font-weight: 900;
+        }
+        .stock{
+          @include flex($wrap: nowrap);
+          &.out{
+            &:before{
+              background-color: red;
+            }
+          }
+          &:before{
+            content: "";
+            width: 10px;
+            height: 10px;
+            min-width: 10px;
+            margin-right: 5px;
+            border-radius: 50%;
+            background-color: green;
+          }
+        }
+        .descripcion{
+          margin-top: 20px;
+        }
+      }
+    }
   }
 }
 
@@ -525,15 +636,18 @@ body{
               }
             }
             .subMenu{
+              @include scrollbars($dotBar: rgba($blanco,.2));
               position: absolute;
               left: 50%;
               top: 100%;
               min-width: 100%;
+              max-height: 300px;
               margin-top: 10px;
               background-color: #000;
               transform: translateX(-50%) translateY(20px);
               visibility: hidden;
               opacity: 0;
+              overflow: auto;
               z-index: $zmenu;
               transition: ease all .3s;
               &:hover{
@@ -723,9 +837,10 @@ body{
   .#{$pfx}container{
     @include container(100%);
     @include flex($ai: stretch);
+    padding-bottom: 100px;
     .mapa{
       width: 50%;
-      min-height: 300px;
+      min-height: 350px;
       iframe{
         width: 100%;
         height: 100%;
@@ -746,6 +861,190 @@ body{
       }
       .texto{
         margin-bottom: 10px;
+      }
+    }
+    .formulario{
+      width: 100%;
+      margin-top: 50px;
+      .form{
+        @include flex;
+        width: 100%;
+        max-width: 800px;
+        margin: 0 auto;
+        .field{
+          @include flex;
+          width: 100%;
+          margin-top: 30px;
+          position: relative;
+          border-bottom: 1px solid rgba($negro,.2);
+          transition: ease all .3s;
+          &.required{
+            label{
+              &:after{
+                content: "*";
+                color: red;
+              }
+            }
+          }
+          &.error{
+            color: red;
+            border-color: red;
+            &:after{
+              content: "Este campo es obligatorio";
+              position: absolute;
+              right: 0;
+              bottom: 10px;
+              font-size: 12px;
+              font-weight: 600;
+              pointer-events: none;
+            }
+          }
+          &.active{
+            label{
+              top: 0;
+              left: 10px;
+              font-size: 12px;
+              font-weight: 600;
+              transform: translateY(-100%);
+            }
+          }
+          label{
+            position: absolute;
+            top: 10px;
+            left: 20px;
+            transition: ease all .3s;
+          }
+          input, textarea{
+            width: 100%;
+            padding: 10px 20px;
+            border: 0;
+            outline: none;
+            box-sizing: border-box;
+          }
+          textarea{
+            min-height: 100px;
+            resize: vertical;
+          }
+        }
+        .boton{
+          margin-top: 30px;
+          padding: 10px 25px;
+          min-width: 100px;
+          border-radius: 50px;
+          color: $negro;
+          font-size: 12px;
+          font-weight: 600;
+          text-align: center;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+          border: 1px solid $negro;
+          cursor: pointer;
+          transition: ease all .3s;
+          &:hover{
+            color: $blanco;
+            border-color: $primario;
+            background-color: $primario;
+            transform: translateY(-5px);
+            box-shadow: 0 10px 10px 0 rgba($negro,.1);
+          }
+        }
+      }
+    }
+  }
+}
+.#{$pfx}footer{
+  background-color: $negro;
+  .#{$pfx}container{
+    @include container;
+    padding-top: 50px;
+    .logo{
+      @include imagen($size: contain);
+      display: block;
+      width: 200px;
+      height: 100px;
+      margin: 0 auto;
+    }
+    .links{
+      @include flex;
+      width: 100%;
+      padding: 20px 0;
+      .link{
+        margin: 5px 15px;
+        color: $blanco;
+        font-size: 14px;
+        position: relative;
+        &:hover{
+          &:before{
+            width: 100%;
+          }
+        }
+        &:before{
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          width: 0;
+          height: 1px;
+          margin: 0 auto;
+          background-color: $primario;
+          transition: ease all .3s;
+        }
+      }
+    }
+    .bottomBar{
+      @include flex;
+      border-top: 1px dashed rgba($blanco,.2);
+      .legend{
+        width: 50%;
+        color: $blanco;
+        text-align: right;
+      }
+      .social{
+        @include flex($jc: flex-start);
+        width: 50%;
+        padding: 10px 0;
+        .icono{
+          width: 35px;
+          height: 35px;
+          margin: 5px;
+          cursor: pointer;
+          color: $blanco;
+          transition: ease all .3s;
+          &:hover{
+            color: $primario;
+            transform: translateY(-5px);
+            svg{
+              transform: rotateY(360deg);
+            }
+          }
+          svg{
+            transition: ease all .3s;
+            path, circle{
+              fill: currentColor;
+            }
+          }
+        }
+      }
+    }
+    @include tablet{
+      .links{
+        .link{
+          margin: 5px 10px;
+        }
+      }
+      .bottomBar{
+        flex-direction: column;
+        padding-bottom: 20px;
+        .social{
+          width: 100%;
+          padding: 20px 0;
+          justify-content: center;
+        }
+        .legend{
+          width: 100%;
+          text-align: center;
+        }
       }
     }
   }
